# gauge

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yml  CHANGELOG.rst  CMakeLists.txt  FetchDependencies.cmake  README.rst  VERSION  setup.py  sonar-project.properties  tox.ini
.github/workflows/: main.yml
docs/source/: Development.rst  Usage.rst  conf.py  index.rst
include/gauge/: base.hpp  collector.hpp  sampling_collector.hpp  span_aggregator.hpp
scripts/: format.py  get_sonar_results.py  write_version.py
src/cpp/gauge/: base.cpp  binding.cpp  sampling_collector.cpp  span_aggregator.cpp
src/cpp/gauge/utils/: benchmark.hpp  chrono.hpp  common.hpp  gil.cpp  gil.hpp  logging.cpp  logging.hpp
src/py/gauge/: __init__.py
src/py/gauge/aggregators/: __init__.py  span_aggregator.py
src/py/gauge/collectors/: __init__.py  base.py  sampling_collector.py
src/py/gauge/exporters/: __init__.py  opentracing_exporter.py
src/py/gauge/utils/: ttldict.py
